<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    android:layout_gravity="bottom"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/material_on_surface_stroke"
    app:cardCornerRadius="15dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_anchorGravity="center"
        android:background="@drawable/card">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/et_registration"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/registration"
            android:textColor="#F3EAE7"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/et_enter_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_login"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:gravity="fill_vertical"
            android:hint="@string/enter_login"
            android:paddingStart="10dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/et_enter_gmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_gmail"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:gravity="fill_vertical"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/example_gmail"
            android:paddingStart="10dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/et_enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_password"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:gravity="fill_vertical"
            android:hint="@string/enter_password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/et_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/rounded_corner"
            android:gravity="fill_vertical"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingStart="10dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_registr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registr"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/color"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginBottom="45dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/enter"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
            app:layout_constraintStart_toEndOf="@+id/tv_have_account" />

        <View
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="3.6dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/pip_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

