<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tittle_role"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/participant_of_the_organization"
            android:textColor="@color/colorInputFieldText"
            android:textSize="36sp"
            android:paddingStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_input_hint"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/participant_of_the_organization_description"
            android:textColor="@color/colorInputFieldText"
            android:paddingStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle_role" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_first_name"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="fill_vertical"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:layout_marginTop="21dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_input_hint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_last_name"
            android:layout_width="353dp"
            android:layout_height="46dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="fill_vertical"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="@color/colorInputFieldText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_first_name" />


        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="47dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/et_enter_last_name"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_last_name" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/agree_to_terms"
            android:textColor="@color/colorInputFieldText"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/cb_agree"
            app:layout_constraintTop_toTopOf="@+id/cb_agree" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_agree"
            app:layout_constraintTop_toBottomOf="@+id/tv_agree" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>