<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activities.MainActivity"
    tools:ignore="ExtraText"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="center"
        >


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:textSize="15sp"
            android:textColor="@color/color"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_create_account"
            app:layout_constraintBottom_toTopOf="@+id/tv_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginBottom="30dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="14sp"
            android:textStyle="bold"

            android:paddingStart="5dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
            app:layout_constraintStart_toEndOf="@+id/tv_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>